--- a/templates/address/create.html.twig
+++ b/templates/address/create.html.twig
@@ -8,7 +8,7 @@
 {# START: address_create #}
 {% block body %}
 	<section class="page">
-		<h2>Créer une Adresse</h2>
+		<h2 class="page__h2">Créer une Adresse</h2>
 		{{ form_start(userCreateAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-create-form' }}) }}
 		{# firstName #}
 		<div class="form-field">
