--- a/templates/address/update.html.twig
+++ b/templates/address/update.html.twig
@@ -8,7 +8,7 @@
 {# START: address_update #}
 {% block body %}
 	<section class="page">
-		<h2>Mettre à jour : Adresse</h2>
+		<h2 class="page__h2">Mettre à jour : Adresse</h2>
 		{{ form_start(userUpdateAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-update-form' }}) }}
 		{# firstName #}
 		<div class="form-field">
