--- a/templates/admin/address/create.html.twig
+++ b/templates/admin/address/create.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_address_create #}
 {% block body %}
 	<section class="page">
-		<h2>Créer une Adresse :
+		<h2 class="page__h2">Créer une Adresse :
 			{{ user.firstName }}
 			{{ user.lastName }}</h2>
 		{{ form_start(adminAddressCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-address-create-form' }}) }}
