--- a/templates/admin/address/update.html.twig
+++ b/templates/admin/address/update.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_address_update #}
 {% block body %}
 	<section class="page">
-		<h2>Mettre à jour Adresse :
+		<h2 class="page__h2">Mettre à jour Adresse :
 			{{ user.firstName }}
 			{{ user.lastName }}</h2>
 		{{ form_start(adminAddressUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-address-update-form' }}) }}
