--- a/templates/admin/category/create.html.twig
+++ b/templates/admin/category/create.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_category_create #}
 {% block body %}
 	<section class="page">
-		<h2>Créer une Catégorie</h2>
+		<h2 class="page__h2">Créer une Catégorie</h2>
 		{{ form_start(adminCategoryCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-create-form' }}) }}
 		{# name #}
 		<div class="form-field">
