--- a/templates/admin/category/product-detail.html.twig
+++ b/templates/admin/category/product-detail.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_category_product_detail #}
 {% block body %}
 	<section class="page">
-		<h2>{{ product.name }}
+		<h2 class="page__h2">{{ product.name }}
 		</h2>
 		<div
 			class="neptune">
