--- a/templates/admin/category/update.html.twig
+++ b/templates/admin/category/update.html.twig
@@ -10,7 +10,7 @@
 {# START: admin_category_update #}
 {% block body %}
 	<section class="page">
-		<h2>Mettre à jour Catégorie :
+		<h2 class="page__h2">Mettre à jour Catégorie :
 			{{ category.name }}</h2>
 		{{ form_start(adminCategoryUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-update-form' }}) }}
 		{# name #}
