--- a/templates/admin/delivery-mode/create.html.twig
+++ b/templates/admin/delivery-mode/create.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_delivery_mode_create #}
 {% block body %}
 	<section class="page">
-		<h2>Créer un Mode de Livraison</h2>
+		<h2 class="page__h2">Créer un Mode de Livraison</h2>
 		{{ form_start(adminDeliveryModeCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-delivery-mode-create-form' }}) }}
 		{# picture #}
 		<div class="form-field">
