--- a/templates/admin/delivery-mode/detail.html.twig
+++ b/templates/admin/delivery-mode/detail.html.twig
@@ -10,7 +10,7 @@
 {# START: admin_delivery_mode_detail #}
 {% block body %}
 	<section class="page">
-		<h2>{{ deliveryMode.name }}</h2>
+		<h2 class="page__h2">{{ deliveryMode.name }}</h2>
 		<div
 			class="neptune">
 			{# START: card for mobile #}
