--- a/templates/admin/delivery-mode/list.html.twig
+++ b/templates/admin/delivery-mode/list.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_delivery_mode_list #}
 {% block body %}
 	<section class="page">
-		<h2>Modes de Livraison</h2>
+		<h2 class="page__h2">Modes de Livraison</h2>
 		{{ form_start(adminDeliveryModeSearchByNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'delivery-mode-search-by-name-form' }}
 		) }}
 		{# Name #}
