--- a/templates/admin/delivery-mode/update.html.twig
+++ b/templates/admin/delivery-mode/update.html.twig
@@ -10,7 +10,7 @@
 {# START: admin_delivery_mode_update #}
 {% block body %}
 	<section class="page">
-		<h2>Mettre à jour Mode de livraison :
+		<h2 class="page__h2">Mettre à jour Mode de livraison :
 			{{ deliveryMode.name }}</h2>
 		{{ form_start(adminDeliveryModeUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-delivery-mode-update-form' }}) }}
 		{# picture #}
