--- a/templates/admin/main/dashboard.html.twig
+++ b/templates/admin/main/dashboard.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_dashboard #}
 {% block body %}
 	<section class="page">
-		<h2>Dashboard</h2>
+		<h2 class="page__h2">Dashboard</h2>
 		<div class="neptune">
 			<div class="square square_border-color_blue">
 				<a class="page__text-link page__square-link page__link_color_blue" href="{{ path('admin_user_list') }}">Utilisateurs</a>
