--- a/templates/admin/product/detail.html.twig
+++ b/templates/admin/product/detail.html.twig
@@ -10,7 +10,7 @@
 {# START: admin_product_detail #}
 {% block body %}
 	<section class="page">
-		<h2>{{ product.name }}</h2>
+		<h2 class="page__h2">{{ product.name }}</h2>
 		<div
 			class="neptune">
 			{# START: card for mobile #}
