--- a/templates/admin/product/update.html.twig
+++ b/templates/admin/product/update.html.twig
@@ -10,7 +10,7 @@
 {# START: admin_product_update #}
 {% block body %}
 	<section class="page">
-		<h2>Mettre à jour Produit :
+		<h2 class="page__h2">Mettre à jour Produit :
 			{{ product.name }}</h2>
 		{{ form_start(adminProductUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-product-update-form' }}) }}
 		{# picture #}
