--- a/templates/admin/purchase/create.html.twig
+++ b/templates/admin/purchase/create.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_purchase_create #}
 {% block body %}
 	<section class="page">
-		<h2>
+		<h2 class="page__h2">
 			Créer une Commande :
 			{{ user.firstName }}
 			{{ user.lastName }}
