--- a/templates/admin/purchase/list.html.twig
+++ b/templates/admin/purchase/list.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_purchase_list #}
 {% block body %}
 	<section class="page">
-		<h2>Commandes</h2>
+		<h2 class="page__h2">Commandes</h2>
 		{{ form_start(purchaseSearchByReferenceForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'purchase-search-by-reference-form' }}
 		) }}
 		<div class="form-field">
