--- a/templates/admin/purchase/update.html.twig
+++ b/templates/admin/purchase/update.html.twig
@@ -13,7 +13,7 @@
 {# START: admin_purchase_update #}
 {% block body %}
 	<section class="page">
-		<h2>
+		<h2 class="page__h2">
 			Mettre à jour Commande :
 			{{ purchase.reference|upper }}
 			-
