--- a/templates/admin/purchase/user-list.html.twig
+++ b/templates/admin/purchase/user-list.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_purchase_user_list #}
 {% block body %}
 	<section class="page">
-		<h2>Commandes :
+		<h2 class="page__h2">Commandes :
 			{{ user.firstName }}
 			{{ user.lastName }}
 		</h2>
