--- a/templates/admin/user/create.html.twig
+++ b/templates/admin/user/create.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_user_create #}
 {% block body %}
 <section class="page">
-	<h2>Créer un Utilisateur</h2>
+	<h2 class="page__h2">Créer un Utilisateur</h2>
 	{{ form_start(adminUserCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-create-form' }}) }}
 	{# civilityTitle #}
 	<div class="form-field">
