--- a/templates/category/product-list.html.twig
+++ b/templates/category/product-list.html.twig
@@ -10,7 +10,7 @@
 {# START: category_product_list #}
 {% block body %}
 	<section class="page">
-		<h2>Nos
+		<h2 class="page__h2">Nos
 			{{ category.name }}s</h2>
 		{{ form_start(productSearchByNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'product-search-by-name-form' }}
 		) }}
