--- a/templates/main/delivery-and-customer-service.html.twig
+++ b/templates/main/delivery-and-customer-service.html.twig
@@ -8,10 +8,10 @@
 {# START: delivery_and_customer_service #}
 {% block body %}
 	<section class="page">
-		<h2>Livraison et SAV</h2>
+		<h2 class="page__h2">Livraison et SAV</h2>
 		<div class="neptune">
 			<div class="term">
-				<h3>Vous avez une question avant de passer votre commande ?</h3>
+				<h3 class="page__h3">Vous avez une question avant de passer votre commande ?</h3>
 				<div class="term-customer-service">
 					<h4 class="term__question term__question_color_blue">Où livrez-vous ?</h4>
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
@@ -32,7 +32,7 @@
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
 				</div>
-				<h3>Vous avez une question concernant la livraison de votre commande ?</h3>
+				<h3 class="page__h3">Vous avez une question concernant la livraison de votre commande ?</h3>
 				<div class="term-customer-service">
 					<h4 class="term__question term__question_color_blue">L’acheminement de mon colis est long, que dois-je faire ?</h4>
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
@@ -43,7 +43,7 @@
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
 				</div>
-				<h3>Vous avez une question à la suite de votre commande chez E-Shop ?</h3>
+				<h3 class="page__h3">Vous avez une question à la suite de votre commande chez E-Shop ?</h3>
 				<div class="term-customer-service">
 					<h4 class="term__question term__question_color_blue">Je souhaite modifier ma commande, ajouter ou supprimer un produit, comment faire ?</h4>
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
@@ -79,7 +79,7 @@
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
 				</div>
-				<h3>Vous souhaitez obtenir plus d'informations concernant votre compte client ?</h3>
+				<h3 class="page__h3">Vous souhaitez obtenir plus d'informations concernant votre compte client ?</h3>
 				<div class="term-customer-service">
 					<h4 class="term__question term__question_color_blue">Je n’arrive pas à me connecter à mon compte client, comment faire ?</h4>
 					<p class="display-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, saepe, et ducimus natus consequuntur, reiciendis dolorum quod iusto autem eos voluptatum. Similique ipsam commodi assumenda facere quaerat molestiae veritatis doloremque!</p>
