--- a/templates/main/fixture.html.twig
+++ b/templates/main/fixture.html.twig
@@ -8,7 +8,7 @@
 {# START: fixture #}
 {% block body %}
 	<section class="page">
-		<h2>Fixture</h2>
+		<h2 class="page__h2">Fixture</h2>
 
 	</section>
 {% endblock %}
