--- a/templates/main/general-terms-of-sale.html.twig
+++ b/templates/main/general-terms-of-sale.html.twig
@@ -8,25 +8,25 @@
 {# START: general_terms_of_sale #}
 {% block body %}
 	<section class="page">
-		<h2>Conditions Générales de Vente</h2>
+		<h2 class="page__h2">Conditions Générales de Vente</h2>
 		<div class="neptune">
 			<div class="term">
-				<h3>Article 1</h3>
+				<h3 class="page__h3">Article 1</h3>
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum consectetur doloribus minus maxime sint in labore a, praesentium rerum fugit? Reiciendis beatae deleniti rem consequatur maiores laudantium exercitationem commodi inventore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo molestiae atque maxime quos sit veritatis reprehenderit est fuga ea, rerum quidem hic commodi maiores dolorem fugiat voluptatem voluptatibus cumque optio.</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum!</p>
-				<h3>Article 2</h3>
+				<h3 class="page__h3">Article 2</h3>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, amet alias nostrum, nulla dolorum similique molestiae magnam dicta eum ea expedita tenetur distinctio eius optio, commodi inventore sed aliquid aspernatur.</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum!</p>
-				<h3>Article 3</h3>
+				<h3 class="page__h3">Article 3</h3>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim explicabo voluptates numquam nobis commodi, itaque expedita fugiat quod dolores iste, corrupti architecto non doloribus amet quis fugit magni maiores? Cupiditate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis voluptatum corporis nihil. Vel reprehenderit facilis aliquam praesentium delectus ducimus dolore impedit nemo laboriosam ipsam labore amet, esse molestias mollitia!</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum!</p>
-				<h3>Article 4</h3>
+				<h3 class="page__h3">Article 4</h3>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque delectus quo minus magni temporibus rem accusamus dolore quas laborum labore amet reiciendis, optio tempore, recusandae nobis id quae suscipit ut.</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum!</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum!</p>
-				<h3>Article 5</h3>
+				<h3 class="page__h3">Article 5</h3>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum!</p>
-				<h3>Article 6</h3>
+				<h3 class="page__h3">Article 6</h3>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum!</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos similique sint atque accusantium, quo eos molestias esse perspiciatis aut ullam deserunt adipisci! Provident deleniti iure illum dolor nisi ipsum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique tempora illum nam obcaecati laborum id at molestias molestiae quasi repudiandae minima saepe, explicabo iure, voluptates, cumque officia aliquid fugit corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius totam maxime incidunt quos necessitatibus unde quo repellat dignissimos voluptate cum vel explicabo, quod sed soluta ea in eveniet aliquam nemo.</p>
 			</div>
