--- a/templates/main/secure-payment.html.twig
+++ b/templates/main/secure-payment.html.twig
@@ -8,10 +8,10 @@
 {# START: secure_payment #}
 {% block body %}
 	<section class="page">
-		<h2>Paiement Securisé</h2>
+		<h2 class="page__h2">Paiement Securisé</h2>
 		<div class="neptune">
 			<div class="term term-secure-payment">
-				<h3>PAIEMENT PAR CARTE BANCAIRE</h3>
+				<h3 class="page__h3">PAIEMENT PAR CARTE BANCAIRE</h3>
 				<img class="page__logo-checkout-method page__logo-visa" src="{{ asset('assets/images/logos/visa.svg') }}" alt="logo-visa"/>
 				<img class="page__logo-checkout-method page__logo-mastercard" src="{{ asset('assets/images/logos/mastercard.svg') }}" alt="logo-mastercard"/>
 				<img class="page__logo-checkout-method page__logo-cb" src="{{ asset('assets/images/logos/cb.svg') }}" alt="logo-cb"/>
@@ -21,7 +21,7 @@
 					<strong>PAIEMENT TOTALEMENT SÉCURISÉ</strong>
 					: la transaction est cryptée (SSL). Les informations bancaires que vous donnez, cryptées sur votre propre ordinateur, ne circuleront jamais en clair sur Internet et votre numéro de carte ne sera jamais connu ni conservé par www.e-shop.fr.
 				</p>
-				<h3>PAIEMENT PAR PAYPAL</h3>
+				<h3 class="page__h3">PAIEMENT PAR PAYPAL</h3>
 				<img class="page__logo-checkout-method page__logo-paypal" src="{{ asset('assets/images/logos/paypal.svg') }}" alt="logo--paypal"/>
 				<p>PayPal est un service qui vous permet de payer en ligne, d'envoyer et de recevoir de l'argent sans partager vos informations bancaires.</p>
 				<p>
