--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -8,7 +8,7 @@
 {# START: product_list #}
 {% block body %}
 	<section class="page">
-		<h2>Nos Produits</h2>
+		<h2 class="page__h2">Nos Produits</h2>
 		{{ form_start(productSearchByNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'product-search-by-name-form' }}
 		) }}
 		<div class="form-field">
