--- a/templates/purchase/list.html.twig
+++ b/templates/purchase/list.html.twig
@@ -11,7 +11,7 @@
 {# START: purchase_list #}
 {% block body %}
 	<section class="page">
-		<h2>Mes Commandes</h2>
+		<h2 class="page__h2">Mes Commandes</h2>
 		{{ form_start(purchaseSearchByReferenceForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'purchase-search-by-reference-form' }}
 		) }}
 		<div class="form-field">
