--- a/templates/purchase/success.html.twig
+++ b/templates/purchase/success.html.twig
@@ -8,7 +8,7 @@
 {# START: purchase_stripe_success #}
 {% block body %}
 	<section class="page">
-		<h2>Commande confirmée</h2>
+		<h2 class="page__h2">Commande confirmée</h2>
 		<div class="neptune">
 			<div class="term">
 				<p>Bonjour
