--- a/templates/admin/address/user-list.html.twig
+++ b/templates/admin/address/user-list.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_address_user_list #}
 {% block body %}
 	<section class="page">
-		<h2>
+		<h2 class="page__h2">
 			Adresses :
 			{{ user.firstName }}
 			{{ user.lastName }}
@@ -54,7 +54,7 @@
 						{{ address.country }}
 					</p>
 					<p>
-						{{ address.phoneNumber }}
+						{{ address.phoneNumber|phone_number }}
 					</p>
 					<a class="page__link page__detail-link page__link_background-color_blue page__link_color_white" href="{{ path('admin_address_detail', {'userId': user.id, 'addressId': address.id}) }}">Détails</a>
 					<a class="page__link page__update-link page__link_background-color_orange page__link_color_white" href="{{ path('admin_address_update', {'userId': user.id, 'addressId': address.id}) }}">Modifier</a>
@@ -87,7 +87,7 @@
 							<td>{{ address.zipCode}}</td>
 							<td>{{ address.city}}</td>
 							<td>{{ address.country}}</td>
-							<td>{{ address.phoneNumber}}</td>
+							<td>{{ address.phoneNumber|phone_number}}</td>
 							<td>
 								<a class="page__link page__detail-link page__link_background-color_blue page__link_color_white" href="{{ path('admin_address_detail', {'userId': user.id, 'addressId': address.id}) }}">Détails</a>
 								<a class="page__link page__update-link page__link_background-color_orange page__link_color_white" href="{{ path('admin_address_update', {'userId': user.id, 'addressId': address.id}) }}">
