--- a/templates/admin/category/product-list.html.twig
+++ b/templates/admin/category/product-list.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_category_product_list #}
 {% block body %}
 	<section class="page">
-		<h2>{{ category.name }}s</h2>
+		<h2 class="page__h2">{{ category.name }}s</h2>
 		{{ form_start(productSearchByNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'product-search-by-name-form' }}
 		) }}
 		<div class="form-field">
