--- a/templates/admin/product/create.html.twig
+++ b/templates/admin/product/create.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_product_create #}
 {% block body %}
 	<section class="page">
-		<h2>Créer un Produit</h2>
+		<h2 class="page__h2">Créer un Produit</h2>
 		{{ form_start(adminProductCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-product-create-form' }}) }}
 		{# picture #}
 		<div class="form-field">
