--- a/templates/admin/user/detail.html.twig
+++ b/templates/admin/user/detail.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_user_detail #}
 {% block body %}
 	<section class="page">
-		<h2>{{ user.firstName }}
+		<h2 class="page__h2">{{ user.firstName }}
 			{{ user.lastName }}</h2>
 		{# START: card for mobile #}
 		<div class="neptune">
