--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -8,7 +8,7 @@
 {# START: admin_user_list #}
 {% block body %}
 	<section class="page">
-		<h2>Utilisateurs</h2>
+		<h2 class="page__h2">Utilisateurs</h2>
 		{{ form_start(adminUserSearchByLastNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-search-by-name-form' }}
 		) }}
 		<div class="form-field">
