--- a/templates/admin/user/update.html.twig
+++ b/templates/admin/user/update.html.twig
@@ -11,7 +11,7 @@
 {# START: admin_user_update #}
 {% block body %}
 <section class="page">
-	<h2>Mettre à jour Utilisateur :
+	<h2 class="page__h2">Mettre à jour Utilisateur :
 		{{ user.firstName }}
 		{{ user.lastName }}</h2>
 	{{ form_start(adminUserUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-update-form' }}) }}
@@ -65,7 +65,7 @@
 		{{ form_widget(adminUserUpdateForm.email, { 'id': 'user-e-mail-input', 'attr': { 'class': 'form-field__input form-field__user-e-mail-input form-field__input_color_black', 'placeholder': 'E-mail' }}) }}
 		<p class="error-message error-message_color_red error-message-user-e-mail display-none">
 			Merci de saisir un e-mail.
-						/p>{{ form_errors(adminUserUpdateForm.email) }}
+									/p>{{ form_errors(adminUserUpdateForm.email) }}
 		</p>
 	</div>
 	{# password #}
