--- a/templates/cart/detail.html.twig
+++ b/templates/cart/detail.html.twig
@@ -8,14 +8,14 @@
 {# START: cart_detail #}
 {% block body %}
 	<section class="page">
-		<h2>Votre Panier</h2>
+		<h2 class="page__h2">Votre Panier</h2>
 		{% for item in cartItems %}
 			<div class="product">
 				<div class="product-image">
 					<img class="product-image__picture" src="{{ asset('assets/uploads/products/'~ item.product.picture) }}" alt="image {{ item.product.name }}"/>
 				</div>
 				<div class="product-property">
-					<h3>{{ item.product.name }}</h3>
+					<h3 class="page__h3">{{ item.product.name }}</h3>
 					<p>{{ item.product.price|amount }}</p>
 					<p>
 						Quantité x
