--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -8,7 +8,7 @@
 {# START: category_list #}
 {% block body %}
 	<section class="page">
-		<h2>Nos Catégories</h2>
+		<h2 class="page__h2">Nos Catégories</h2>
 		{{ form_start(categorySearchByNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'category-search-by-name-form' }}
 		) }}
 		<div class="form-field">
