--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,7 +8,7 @@
 {# START: app_login #}
 {% block body %}
 	<section class="page">
-		<h2>Connexion</h2>
+		<h2 class="page__h2">Connexion</h2>
 		<form class="form" id="login-form" method="post">
 			{% if error %}
 				<p
