--- a/templates/sign-up/sign-up.html.twig
+++ b/templates/sign-up/sign-up.html.twig
@@ -8,7 +8,7 @@
 {# START: app_sign_up #}
 {% block body %}
 	<section class="page">
-		<h2>Inscrpition</h2>
+		<h2 class="page__h2">Inscrpition</h2>
 		{% for flashError in app.flashes('verify_email_error') %}
 			<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 		{% endfor %}
