--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -11,7 +11,7 @@
 {# START: user_profile #}
 {% block body %}
 	<section class="page">
-		<h2>{{ app.user.firstName }}
+		<h2 class="page__h2">{{ app.user.firstName }}
 			{{ app.user.lastName }}</h2>
 		{{ form_start(userProfileForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'user-profile-form' }}
 		) }}
@@ -78,8 +78,8 @@
 		</button>
 		{{ form_end(userProfileForm) }}
 		{# <a class="display-none page__link page__delete-link page__delete-my-user-account-link page__user-delete-link page__link_background-color_red page__link_color_white" id="delete-my-user-account-link" href="{{ path('user_delete', {'id':app.user.id, 'token':csrf_token('user-delete' ~ app.user.id)} ) }}" data-userfirstname="{{ app.user.firstName }}" data-userlastname="{{ app.user.lastName }}">
-							Supprimer mon compte
-						</a> #}
+									Supprimer mon compte
+								</a> #}
 	</section>
 {% endblock %}
 {# START: user_profile #}
